--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "狗狗年齡換算器",
-  "short_name": "狗狗年齡",
+  "name": "妙麗年齡計算機",
+  "short_name": "妙麗年齡計算機",
   "start_url": "./",
   "display": "standalone",
   "background_color": "#FFE6EE",
